fixed more spacing, tried to do transitions for hashlinks but did not work out :(

--- a/ash-website/src/components/LandingPage.css
+++ b/ash-website/src/components/LandingPage.css
@@ -72,7 +72,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 120px;
+  margin-top: 100px;
 }
 
 .my-work-text {
@@ -89,7 +89,6 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
   height: 100%;
   width: 80%;
 }
@@ -149,7 +148,6 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 60px;
   width: 80%;
 }
 
@@ -312,8 +310,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-left: 200px;
-  margin-right: 200px;
+  width: 75%;
   font-size: 1.5rem;
 }
 
@@ -323,7 +320,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 50px;
+  padding: 30px;
 }
 
 .contact-section {
@@ -348,10 +345,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-left: 100px;
-  margin-right: 100px;
   font-size: 1.5rem;
-  width: 80%;
+  width: 70%;
 }
 
 .contact-email {
@@ -446,7 +441,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 80px;
+  margin-top: 100px;
 }
 
 .footer-image {
